--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,17 @@ homepage = "https://meltano.com"
 repository = "https://github.com/meltano/dbt-ext"
 license = "Apache 2.0"
 
+packages = [
+    { include = "dbt_ext" },
+    { include = "files_dbt_ext" },
+]
+
+# If you need to static assets with your extension, you can add them here.
+# Under a directory path of "files_dbt-ext/"
+include = [
+    {path = "files_dbt_ext"},
+]
+
 [tool.poetry.dependencies]
 python = "<3.11,>=3.7"
 structlog = "^21.2.0"
@@ -17,6 +28,7 @@ pydantic = "^1.9.0"
 click = "^8.1.3"
 typer = "^0.6.1"
 "meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="main"}
+importlib-resources = "^5.9.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
@@ -31,17 +43,7 @@ pytest = "^7.1.3"
 requires = ["poetry-core>=1.0.8"]
 build-backend = "poetry.core.masonry.api"
 
-packages = [
-    { include = "dbt_ext" }
-    # uncomment this if you want to include static assets
-    # { include = "files_dbt-ext.*" }
-]
 
-# If you need to static assets with your extension, you can add them here.
-# Under a directory path of "files_dbt-ext/"
-#include = [
-#    "files_dbt-ext/somefile.thing"
-#]
 
 [tool.poetry.scripts]
 dbt_extension = 'dbt_ext.main:app'
