--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,4 @@ jobs:
           poetry install
       - name: Test with pytest
         run: |
-          poetry run pytest
+          DBT_EXT_TYPE=postgres poetry run pytest
