--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ PyYAML = "^6.0.0"
 pydantic = "^1.9.0"
 click = "^8.1.3"
 typer = "^0.6.1"
-"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="main"}
+"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="feat/pre-post-command-hints"}
 importlib-resources = "^5.9.0"
 
 [tool.poetry.dev-dependencies]
