--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ PyYAML = "^6.0.0"
 pydantic = "^1.9.0"
 click = "^8.1.3"
 typer = "^0.6.1"
-"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="feat/pre-post-command-hints"}
+"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="main"}
 importlib-resources = "^5.9.0"
 
 [tool.poetry.dev-dependencies]
@@ -42,8 +42,6 @@ pytest = "^7.1.3"
 [build-system]
 requires = ["poetry-core>=1.0.8"]
 build-backend = "poetry.core.masonry.api"
-
-
 
 [tool.poetry.scripts]
 dbt_extension = 'dbt_ext.main:app'
