--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,9 +36,11 @@ repos:
     - darglint==1.8.1
     - flake8-annotations==2.9.0
     - flake8-docstrings==1.6.0
+    exclude: 'files_dbt_ext'
 
 - repo: https://github.com/asottile/pyupgrade
   rev: v3.1.0
   hooks:
   - id: pyupgrade
     args: [--py37-plus]
+    exclude: 'files_dbt_ext'
