--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ python = "<3.12,>=3.7"
 PyYAML = "^6.0.0"
 click = "^8.1.3"
 typer = "^0.6.1"
-"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="main"}
+"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="v0.1.0"}
 importlib-resources = "^5.9.0"
 
 [tool.poetry.dev-dependencies]
