Fix dbt/target path in clean-targets in dbt_project.yml

--- a/files_dbt_ext/bundle/transform/dbt_project.yml
+++ b/files_dbt_ext/bundle/transform/dbt_project.yml
@@ -19,7 +19,7 @@ target-path: ../.meltano/transformers/dbt/target
 log-path: logs
 packages-install-path: dbt_packages
 clean-targets:
-- ../.meltano/transformers/dbt/target
+- .meltano/transformers/dbt/target
 - dbt_packages
 - logs
 models:
