--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ maintainers = ["Meltano Team and Contributors"]
 readme = "README.md"
 homepage = "https://meltano.com"
 repository = "https://github.com/meltano/dbt-ext"
-license = "Apache 2.0"
+license = "Apache-2.0"
 
 packages = [
     { include = "dbt_ext" },
@@ -21,11 +21,11 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "<3.12,>=3.7"
+python = ">=3.8"
 PyYAML = "^6.0.0"
 click = "^8.1.3"
 typer = "^0.6.1"
-"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="v0.1.0"}
+"meltano.edk"= { version = "~=0.4.0", python = "<4" }
 importlib-resources = "^5.9.0"
 
 [tool.poetry.dev-dependencies]
@@ -38,7 +38,7 @@ pre-commit = "^2.20.0"
 pytest = "^7.1.3"
 
 [build-system]
-requires = ["poetry-core>=1.0.8"]
+requires = ["poetry-core==1.9.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
