--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Upload wheel and sdist to release
       uses: svenstaro/upload-release-action@v2
       with:
-        file: dist/singer_sdk*
+        file: dist/edk*
         tag: ${{ github.ref }}
         overwrite: true
         file_glob: true
