--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,8 @@ jobs:
         path: dist
     - name: Publish
       uses: pypa/gh-action-pypi-publish@v1.10.1
+      with:
+        attestations: true
 
   upload-to-release:
     name: Upload files to release
