chore: Test with Python 3.13

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
+          - "3.13"
 
     steps:
       - uses: actions/checkout@v4
@@ -37,6 +38,7 @@ jobs:
           poetry --version
       - name: Install dependencies
         run: |
+          poetry env use ${{ matrix.python-version }}
           poetry install
       - name: Test with pytest
         run: |
