--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,19 +25,19 @@ PyYAML = "^6.0.0"
 click = "^8.1.3"
 typer = "^0.6.1"
 "meltano.edk"= { version = "~=0.4.0", python = "<4" }
-importlib-resources = "^5.9.0"
+importlib-resources = ">=5.9.0,<6"
 
 [tool.poetry.dev-dependencies]
-black = "^22.3.0"
-isort = "^5.10.1"
-flake8 = "^3.9.0"
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "^2.20.0"
-pytest = "^7.1.3"
+black = ">=23"
+isort = ">=5.13"
+flake8 = ">=5"
+pre-commit = ">=3"
+pytest = ">=8"
 
 [build-system]
-requires = ["poetry-core==1.9.0", "poetry-dynamic-versioning==1.4.0"]
+requires = ["poetry-core>=1.9,<2", "poetry-dynamic-versioning>=1,<2"]
 build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry.scripts]
