--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,11 +7,15 @@ jobs:
   build:
     name: Build and Inspect
     runs-on: ubuntu-latest
+    outputs:
+      package_name: ${{ steps.baipp.outputs.package_name }}
+      package_version: ${{ steps.baipp.outputs.package_version }}
     steps:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       with:
         fetch-depth: 0
     - uses: hynek/build-and-inspect-python-package@c52c3a4710070b50470d903818a7b25115dcd076 # v2.13.0
+      id: baipp
 
   publish:
     name: Publish to PyPI
@@ -19,7 +23,7 @@ jobs:
     needs: [build]
     environment:
       name: pypi
-      url: https://pypi.org/p/meltano-dbt-ext
+      url: https://pypi.org/p/${{ needs.build.outputs.package_name }}/${{ needs.build.outputs.package_version }}
     if: startsWith(github.ref, 'refs/tags/')
     permissions:
       id-token: write  # Needed for OIDC PyPI publishing
@@ -30,8 +34,6 @@ jobs:
         path: dist
     - name: Publish
       uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # v1.13.0
-      with:
-        attestations: true
 
   upload-to-release:
     name: Upload files to release
