--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,22 +20,19 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.10"
 PyYAML = ">=6.0.0"
-click = ">=8.1,<8.3"
-typer = ">=0.6.1,<0.18"
-"meltano.edk"= { version = "~=0.4.0", python = "<4" }
-importlib-resources = ">=5.9.0,<6"
+click = ">=8.3.0,<8.4.0"
+typer = ">=0.18.0,<0.19.0"
+"meltano.edk"= { version = "~=0.5.0", python = "<4" }
 
 [tool.poetry.group.dev.dependencies]
-black = ">=23"
-isort = ">=5.13"
-flake8 = ">=5"
 pre-commit = ">=3"
 pytest = ">=8"
+ruff = ">=0.13.1"
 
 [build-system]
-requires = ["poetry-core>=1.9,<2", "poetry-dynamic-versioning>=1,<2"]
+requires = ["poetry-core>=2,<3", "poetry-dynamic-versioning>=1,<2"]
 build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry.scripts]
@@ -44,3 +41,17 @@ dbt_invoker = 'dbt_ext.pass_through:pass_through_cli'
 
 [tool.poetry-dynamic-versioning]
 enable = true
+
+[tool.ruff]
+line-length = 88
+target-version = "py39"
+
+[tool.ruff.lint]
+extend-select = [
+    "ANN",  # flake8-annotations
+    "C901", # mccabe
+    "PERF", # pyperf
+    "SIM",  # flake8-simplify
+    "UP",   # pyupgrade
+    "W",    # pycodestyle warnings
+]
