--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,11 @@ include = [
 
 [tool.poetry.dependencies]
 python = ">=3.8"
-PyYAML = "^6.0.0"
-click = "^8.1.3"
-typer = "^0.6.1"
+PyYAML = ">=6.0.0"
+click = ">=8.1,<8.3"
+typer = ">=0.6.1,<0.18"
 "meltano.edk"= { version = "~=0.4.0", python = "<4" }
 importlib-resources = ">=5.9.0,<6"
-
-[tool.poetry.dev-dependencies]
 
 [tool.poetry.group.dev.dependencies]
 black = ">=23"
