--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,12 @@
 version: 2
 updates:
-  - package-ecosystem: pip
-    directory: "/.github/workflows"
+  - package-ecosystem: uv
+    directory: "/"
     schedule:
-      interval: daily
-      time: "12:00"
-      timezone: "UTC"
+      interval: monthly
     labels: [deps]
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
-      interval: weekly
+      interval: quarterly
     labels: [deps]
