--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,50 +1,50 @@
-[tool.poetry]
+[project]
 name = "meltano-dbt-ext"
-version = "0.0.0"
+dynamic = ["version"]
 description = "A Meltano utility extension to manage dbt projects."
-authors = ["Meltano Team and Contributors <hello@meltano.com>"]
-maintainers = ["Meltano Team and Contributors <hello@meltano.com>"]
+authors = [{ name = "Meltano Team and Contributors", email = "hello@meltano.com" }]
+requires-python = ">=3.10"
 readme = "README.md"
-homepage = "https://meltano.com"
-repository = "https://github.com/meltano/dbt-ext"
 license = "Apache-2.0"
-
-packages = [
-    { include = "dbt_ext" },
+maintainers = [{ name = "Meltano Team and Contributors", email = "hello@meltano.com" }]
+dependencies = [
+    "PyYAML>=6.0.0",
+    "click>=8.3.0,<8.4.0",
+    "typer>=0.18.0,<0.19.0",
+    "meltano.edk~=0.5.0",
 ]
 
-# If you need to static assets with your extension, you can add them here.
-# Under a directory path of "files_dbt-ext/"
-include = [
-    {path = "files_dbt_ext"},
+[project.urls]
+Homepage = "https://meltano.com"
+Repository = "https://github.com/meltano/dbt-ext"
+
+[project.scripts]
+dbt_extension = "dbt_ext.main:app"
+dbt_invoker = "dbt_ext.pass_through:pass_through_cli"
+
+[dependency-groups]
+dev = [
+    "pre-commit>=3",
+    "pytest>=9",
+    "ruff>=0.15",
 ]
 
-[tool.poetry.dependencies]
-python = ">=3.10"
-PyYAML = ">=6.0.0"
-click = ">=8.3.0,<8.4.0"
-typer = ">=0.18.0,<0.19.0"
-"meltano.edk"= { version = "~=0.5.0", python = "<4" }
+[tool.hatch.version]
+fallback-version = "0.0.0.dev0"
+source = "vcs"
 
-[tool.poetry.group.dev.dependencies]
-pre-commit = ">=3"
-pytest = ">=8"
-ruff = ">=0.13.1"
+[tool.hatch.build.targets.sdist]
+packages = ["dbt_ext"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["dbt_ext"]
 
 [build-system]
-requires = ["poetry-core>=2,<3", "poetry-dynamic-versioning>=1,<2"]
-build-backend = "poetry_dynamic_versioning.backend"
-
-[tool.poetry.scripts]
-dbt_extension = 'dbt_ext.main:app'
-dbt_invoker = 'dbt_ext.pass_through:pass_through_cli'
-
-[tool.poetry-dynamic-versioning]
-enable = true
+requires = ["hatchling>=1,<2", "hatch-vcs"]
+build-backend = "hatchling.build"
 
 [tool.ruff]
 line-length = 88
-target-version = "py39"
 
 [tool.ruff.lint]
 extend-select = [
